fixed wave z-index issues

--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ li {
     top: 65vh;
     width: 100%;
     height: auto;
-    z-index: 2;
+    z-index: 0;
 }
 #water {
     opacity: 1;
@@ -168,5 +168,5 @@ li {
     width: 100%;
     height: 0%;
     background-color: #39BECB;
-    z-index: 2;
+    z-index: 0;
 }
